# peersity-api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile
src/: main.rs
src/database/: health.rs  mod.rs  user.rs
src/endpoints/: auth.rs  get_user.http  health.rs  mod.rs  post_login.http  user.rs
src/middleware/: auth.rs
src/models/: auth.rs  config.rs  error.rs  health.rs  mod.rs  user.rs
