[package]
name = "peersity-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
config = "0.14"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"